tdf#153869 qt: Unminimize window when requested

Remove the `Qt::WindowMinimized` state from the widget's
window states if the `SalFrameToTop::RestoreWhenMin`
flag is set to request restoring the minimized window.

Change-Id: I0cb67f28c1e9c3f48a9a234702a4aaa7e3ffec8d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148036
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit 00a602ca8e75ab5cf050e092289ef7165b343165)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147988
Reviewed-by: Caolán McNamara <caolanm@redhat.com>